[tool.poetry]
name = "faexport_db"
version = "0.1.0"
description = "Furry Art database"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
