[tool.poetry]
name = "faexport_db"
version = "0.1.0"
description = "Furry Art database"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
python-dateutil = {version = "^2.8.2", optional = true}
tqdm = {version = "^4.64.0", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-type-checking = "^2.0.1"

[tool.poetry.extras]
ingest_fa_indexer = ["python-dateutil", "tqdm"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
