[tool.poetry]
name = "faexport_db"
version = "0.1.0"
description = "Furry Art database"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
python-dateutil = "^2.8.2"
tqdm = {version = "^4.64.0", optional = true}
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-type-checking = "^2.0.1"
black = "^22.6.0"

[tool.poetry.extras]
ingest_fa_indexer = ["python-dateutil", "tqdm"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
mypy_path = "faexport_db/stubs"
files = "faexport_db,scripts"

[tool.isort]
line_length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"